# CS6242-Final_Project

./: .gitignore  LICENSE  README.md  pyproject.toml
CODE/: requirements.txt
CODE/datacleanup/: convert-hd5-to-csv.ipynb
docs/: proposal.md  research-papers.md
site/: package-lock.json  package.json
site/components/: Footer.jsx  Header.jsx
site/pages/: index.tsx
